resources/css/style.css
/* header */
header {
  display: flex;
  align-items: center;
  position: fixed;
  z-index: 1;
  width: 100%;
  height: 69px;
  border-bottom: 1px solid seashell;
  background-color: black;
}

.logo {
  display: flex;
  padding-left: 10px;
  align-items: center;
  flex-grow: 1;
}

.logo img {
  height: 50px;
  margin-right: 12px;
}

header nav {
  padding-right: 40px;
}

a {
  color: seashell;
}

nav span {
  padding: 20px 10px;
}
/* universal styles */
body {
  margin: 0;
  font-family: Helvetica;
  font-size: 22px;
  color: seashell;
  background-color: black;
  opacity; 0.9;
}

.main-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* our mission section */
.mission {
  display: flex;
  justify-content: center;
}

.mission{
  padding-top: 70px;
  height: 700px;
  width: 1200px;
  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
}

.mission .title {
  background-color: black;
  width: 100%;
  align-items: center;
}

/*tea of the month */
.teaofthemonth {
  display: flex;
  justify-content: space-around;
  width: 1000px;
  flex-wrap: wrap;
}

.tealist {

}

.tea img {
  height: 200px;
  width: 300px;
}

/* adresses */
.locations {
  display: flex;
  justify-content: space-around;
  align-content: center;
  margin-left: 20px;
  margin-right: 20px;
}

.locations{
  height: 500px;
  width: 1200px;
  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
}

.info {
  background-color: black;
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding-right: 40px;
  padding-top: 15px;
  width: 300px;
  height: 300px;
}
.contact-info {
  display: flex;
  align-content: center;
}
.contact-info.copyright {
  align-self: flex-start;
}

